--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 h2 {
         font-size: 2.2em;
         text-align: center;
+        line-height: 80pt;
     
 }
 
@@ -83,8 +84,8 @@ nav{
 }
 
 .contenedor {
-  margin: 200px;
-  margin-bottom: 50px;
+  margin: 270px;
+  margin-bottom: 10px;
 }
 .contenedor  h1{
   text-transform: uppercase;
@@ -100,7 +101,7 @@ nav{
 .membresias{
   display: flex;
   justify-content:space-around;
-  padding: 50px 100px 100px 140px;
+  padding:50px 140px 100px 140px;
   margin-top: 200px;
 }
 .membresia{
@@ -121,7 +122,7 @@ nav{
   font-size: 2em;
 }
 .btn{
-  background:black;
+  background: rgb(14, 14, 14);
   cursor:pointer;
   padding:5px 20px;
   color:rgb(241, 239, 242);
@@ -140,7 +141,7 @@ nav{
 
 }
  #contacto{
-   background-color: black;
+   background-color: rgb(14, 14, 14);
    color:rgb(241, 239, 242);
    height: 75px;
    text-align: center;
@@ -178,12 +179,3 @@ nav{
  }
 
 
-  @media only screen and (max-width: 700px) only screen and (max-device-width: 700px) {
-
-    #rt-main, #rt-header, .rt-container, .rt-container .rt-grid-8, .rt-container .rt-grid-8,.rt-container .rt-grid-9, .footer-container, .rt-container .rt-grid-3, .rt-container .rt-grid-6 {width: 99%;}
-    
-     body{min-width: 100%;}
-    
-     .rt-container .rt-grid-4 {display: none;}
-    
-    }
